// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CardComponent darkTheme Theme should match the snapshot with alert class 1`] = `
<DocumentFragment>
  .c0 {
  background-image: #0F1535;
  border: 0.0625rem solid #21497D;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit text-decoration:none;
}

<div
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`CardComponent darkTheme Theme should match the snapshot with success class 1`] = `
<DocumentFragment>
  .c0 {
  background-image: #0F1535;
  border: 0.0625rem solid #21497D;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit text-decoration:none;
}

<div
    class="c0 success"
  />
</DocumentFragment>
`;

exports[`CardComponent darkTheme Theme should match the snapshot with warning class 1`] = `
<DocumentFragment>
  .c0 {
  background-image: #0F1535;
  border: 0.0625rem solid #21497D;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit text-decoration:none;
}

<div
    class="c0 warning"
  />
</DocumentFragment>
`;

exports[`CardComponent darkTheme Theme should match the snapshot without any class 1`] = `
<DocumentFragment>
  .c0 {
  background-image: #0F1535;
  border: 0.0625rem solid #21497D;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit text-decoration:none;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`CardComponent lightlightTheme Theme should match the snapshot with alert class 1`] = `
<DocumentFragment>
  .c0 {
  background-image: #FFF;
  border: 0.0625rem solid #E0E0E0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit text-decoration:none;
}

<div
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`CardComponent lightlightTheme Theme should match the snapshot with success class 1`] = `
<DocumentFragment>
  .c0 {
  background-image: #FFF;
  border: 0.0625rem solid #E0E0E0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit text-decoration:none;
}

<div
    class="c0 success"
  />
</DocumentFragment>
`;

exports[`CardComponent lightlightTheme Theme should match the snapshot with warning class 1`] = `
<DocumentFragment>
  .c0 {
  background-image: #FFF;
  border: 0.0625rem solid #E0E0E0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit text-decoration:none;
}

<div
    class="c0 warning"
  />
</DocumentFragment>
`;

exports[`CardComponent lightlightTheme Theme should match the snapshot without any class 1`] = `
<DocumentFragment>
  .c0 {
  background-image: #FFF;
  border: 0.0625rem solid #E0E0E0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.success {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit text-decoration:none;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
